# app

./: .env.template  Dockerfile  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
mysite/: shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_author.py  0003_category.py  0004_tag.py  0005_article_author.py  0006_article_category.py  0007_article_tags.py  0008_alter_category_options.py  0009_alter_article_author.py
mysite/blogapp/templates/blogapp/: article_details.html  article_list.html
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: views.py
mysite/myauth/templates/myauth/: about-me.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite/shopapp/management/commands/: aggregate.py  bulk_actions.py  create_order.py  seleting_fields.py
mysite/shopapp/migrations/: 0011_alter_product_description_alter_product_name.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: orders_changelist.html  products_changelist.html  shop-index.html  user_orders_list.html
