[tool.poetry]
name = "hometask"
version = "0.1.0"
description = ""
authors = ["Valerii Nataleev <valetnat91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-filter = "23.2"
django-debug-toolbar = "4.1.0"
pillow = "9.5.0"
gunicorn = "20.1.0"
drf-spectacular = "0.26.3"
django = "4.2.1"
djangorestframework = "3.14.0"
sentry-sdk = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
